tests/NormalTests/paczka1/small_fuzzy/66021198.err
Error in line 1: yv2KP A923 62,2
Error in line 5: k94G S851 62,0
